<resources>
    <string name="app_name">GpxAnalyzer</string>
    <string name="undefined_data_entity_time">--:--</string>
    <string name="undefined_data_entity_value">---</string>
    <string name="undefined_data_entity_unit">[---]</string>
    <string name="default_distance_data_entity_unit">[m]</string>
    <string name="default_speed_data_entity_unit">[m/s]</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="gpx_charts">Gpx charts</string>
    <string name="load">Load</string>
    <string name="reset">Reset</string>
    <string name="dots">Dots</string>
    <string name="search_for_file">Search for file</string>
    <string name="permission_denied_cannot_access_files">Permission denied. Cannot access files.</string>
    <string name="wrong_file_format_select_gpx_only">Wrong file format. Select .gpx only!</string>
    <string name="file_found_now_select_one_from_the_list">File found. \nNow select one from the list.</string>
    <string name="selected">"Selected: "</string>
    <string name="the_list_of_gpx_file_to_use_is_empty_click_search_for_file_first">The list of gpx file to use is empty.\nClick [Search for file] first!</string>

    <string name="two_charts_asl_t_v_t">Two charts: ASL(t), v(t)</string>
    <string name="one_chart_asl_t_v_t">One chart : ASL(t), v(t)</string>
    <string name="one_chart_asl_t">One chart : ASL(t)</string>
    <string name="one_chart_v_t">One chart : v(t)</string>

    <string name="two_charts_asl_t_v_t_short">ASL(t) , v(t)</string>
    <string name="one_chart_asl_t_v_t_short">ASL(t) + v(t)</string>
    <string name="one_chart_asl_t_short">ASL(t)</string>
    <string name="one_chart_v_t_short">v(t)</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="onOffColorizedCirclesCheckBox">onOffColorizedCirclesCheckBox</string>
    <string name="draw_asc_desc_segments">Ascent/Descent Segments</string>


    <string name="disabled">disabled</string>
    <string name="on_off_colorized_circles">On/Off colorized circles</string>
    <string name="time_autoscaling">Time autoscaling</string>
    <string name="file_size_format_string_d_kb">%d kB</string>

    <string name="searching_files">Searching for files…</string>
    <string name="searching_files_progress">Searching… %1$d%%</string>
    <string name="no_gpx_files_found">No GPX files found</string>
    <string name="found_gpx_files">Found %1$d GPX files</string>
    <string name="error_searching_files">Error searching for files</string>

    <string name="creator_format_string">Creator: %s</string>
    <string name="creator_prefix">Creator: \t</string>
    <string name="author_format_string">Author: %s</string>
    <string name="author_prefix">Author: \t</string>
    <string name="first_point_lat_s_lon_s_ele_s">First point: Lat=%s, Lon=%s, Ele=%s</string>
    <string name="map_miniature_preview">map_miniature_preview</string>
    <string name="overlay_view_to_reload_imageview">overlay_view_to_reload_imageview</string>
    <string name="generating_miniatures_progress">Miniatures… %1$d%%</string>

    <!-- Coordinate formatting strings -->
    <string name="coordinate_dms_format">%1$d°%2$d\'%3$.1f\"</string>
    <string name="coordinate_north">N</string>
    <string name="coordinate_south">S</string>
    <string name="coordinate_east">E</string>
    <string name="coordinate_west">W</string>
    <string name="elevation_unit">m asl.</string>
    <string name="coordinates_separator">,\n</string>
    <string name="location_start">Start:</string>
    <string name="file_details">File Details</string>

</resources>