<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="chartAreaItem"
            type="com.itservices.gpxanalyzer.ui.gpxchart.item.ChartAreaItem" />

        <variable
            name="viewModel"
            type="com.itservices.gpxanalyzer.ui.gpxchart.ChartAreaListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small">

        <ImageButton
            android:id="@+id/time_zoom_in_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_small"
            android:alpha="0.5"
            android:background="@drawable/ic_zoom_in_selector"
            android:backgroundTintMode="add"
            android:contentDescription="@string/zoom_in"
            android:onClick="@{() -> viewModel.onZoomIn(chartAreaItem)}"
            android:enabled="@{chartAreaItem.enabledLiveData}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/time_zoom_out_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_very_small"
            android:alpha="0.5"
            android:background="@drawable/ic_zoom_out_selector"
            android:backgroundTintMode="add"
            android:contentDescription="@string/zoom_out"
            android:onClick="@{() -> viewModel.onZoomOut(chartAreaItem)}"
            android:enabled="@{chartAreaItem.enabledLiveData}"
            app:layout_constraintEnd_toStartOf="@+id/time_autoscaling_button"
            app:layout_constraintStart_toEndOf="@id/time_zoom_in_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/time_autoscaling_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_very_small"
            android:alpha="0.5"
            android:background="@drawable/ic_recenter_selector"
            android:backgroundTintMode="add"
            android:contentDescription="@string/reset"
            android:onClick="@{() -> viewModel.onAutoScaling(chartAreaItem)}"
            android:enabled="@{chartAreaItem.enabledLiveData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time_zoom_out_button"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>