<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chart_value_info_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardBackgroundColor="@color/lightGrayBackground"
        card_view:cardCornerRadius="@dimen/margin_small"
        card_view:cardElevation="10dp"
        card_view:contentPadding="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkGrayBackground"
                android:text="@string/undefined_data_entity_time"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewValue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined_data_entity_value"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewTime"
                card_view:layout_constraintTop_toBottomOf="@+id/textViewTime" />

            <TextView
                android:id="@+id/textViewValue1Unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined_data_entity_unit"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/textViewTime"
                card_view:layout_constraintBottom_toBottomOf="@+id/textViewValue1"
                card_view:layout_constraintTop_toTopOf="@+id/textViewValue1" />

<!--            <TextView
                android:id="@+id/textViewValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined_data_entity_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="@+id/textViewTime"
                card_view:layout_constraintTop_toBottomOf="@+id/textViewValue1" />

            <TextView
                android:id="@+id/textViewValue2Unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined_data_entity_unit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                android:textStyle="normal"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@+id/textViewTime"
                card_view:layout_constraintBottom_toBottomOf="@+id/textViewValue2"
                card_view:layout_constraintTop_toTopOf="@+id/textViewValue2" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>